%%{
  init: {
    "theme": "base",
    "themeVariables": {
      "fontSize": "50px"
    },
    "themeCSS": ".edgeLabel { font-size: 50px !important; }"
  }
}%%

erDiagram
  USERS {
    string id PK
    string username
    string email
    string password_hash
    string photo
    string bio
    boolean isAdmin
    boolean isMod
    date lastLogin
    boolean isVerified
    object preferences
    object stats
    date created_at
    date updated_at
  }
  TRIPS {
    string id PK
    string user_id FK
    string title
    date start_date
    date end_date
    string[] destinations
    string status
    boolean isPublic
    object budget
    array activities
    date created_at
    date updated_at
  }
  DESTINATIONS {
    string id PK
    string name
    string description
    string location
    string photo
    date created_at
    date updated_at
  }
  PLACES {
    string id PK
    string destination_id FK
    string type
    string name
    string description
    string photo
    float average_rating
    string price_range
    string opening_hours
    string address
    date created_at
    date updated_at
  }
  REVIEWS {
    string id PK
    string user_id FK
    string place_id FK
    int rating
    string comment
    array photos
    object helpful_votes
    date visit_date
    object categories
    date created_at
    date updated_at
  }
  FOLLOWS {
    string id PK
    string user_id FK
    string follower_id FK
    date created_at
    date updated_at
  }
  POSTS {
    string id PK
    string user_id FK
    string content
    string media
    string type
    string visibility
    string[] tags
    object location
    date created_at
    date updated_at
  }
  COMMENTS {
    string id PK
    string post_id FK
    string user_id FK
    string content
    date created_at
    date updated_at
    string parent_comment_id
  }
  LIKES {
    string id PK
    string user_id FK
    string target_type
    string target_id
    date created_at
    date updated_at
  }
  NOTIFICATIONS {
    string id PK
    string user_id FK
    string type
    object data
    boolean is_read
    date created_at
    date updated_at
  }
  MODERATIONLOGS {
    string id PK
    string moderator_id FK
    string action
    string target_type
    string target_id
    string reason
    string status
    object resolution
    date created_at
    date updated_at
  }
  ANALYTICS {
    string id PK
    date date
    object metrics
    array popularDestinations
    array popularPlaces
    date created_at
    date updated_at
  }

  USERS ||--o{ TRIPS : "creates"
  USERS ||--o{ REVIEWS : "writes"
  USERS ||--o{ POSTS : "creates"
  USERS ||--o{ COMMENTS : "writes"
  USERS ||--o{ FOLLOWS : "follows"
  USERS ||--o{ LIKES : "likes"
  USERS ||--o{ NOTIFICATIONS : "receives"
  USERS ||--o{ MODERATIONLOGS : "moderates"
  USERS ||--o{ MODERATIONLOGS : "is target of"
  TRIPS }o--o{ PLACES : "has activity at"
  DESTINATIONS ||--o{ PLACES : "has"
  PLACES ||--o{ REVIEWS : "receives"
  POSTS ||--o{ COMMENTS : "has"
  POSTS ||--o{ LIKES : "receives"
  POSTS ||--o{ MODERATIONLOGS : "is target of"
  COMMENTS ||--o{ LIKES : "receives"
  COMMENTS ||--o{ COMMENTS : "replies to"
  COMMENTS ||--o{ MODERATIONLOGS : "is target of"
  REVIEWS ||--o{ LIKES : "receives"
  REVIEWS ||--o{ MODERATIONLOGS : "is target of"
  ANALYTICS }o--o{ DESTINATIONS : "tracks"
  ANALYTICS }o--o{ PLACES : "tracks"